--- a/index.html
+++ b/index.html
@@ -11,7 +11,142 @@
   <!-- header -->
   <div class="header">
     <a href="#" class="logo"><img src="./images/logo.png" alt="로고"></a>
+    <ul>
+      <li><a href="#">홈</a></li>
+      <li><a href="#">스마트폰</a></li>
+      <li><a href="#">태블릿</a></li>
+      <li><a href="#">워치</a></li>
+      <li><a href="#">버즈</a></li>
+      <li><a href="#">기타</a></li>
+    </ul>
+    <div class="shopping_cart">
+      <a href="#"><img src="./images/shopping_cart.png" alt="쇼핑카트"></a>
+    </div>
+  </div>
+
+  <!-- slide -->
+  <div class="slide_container">
+    <div class="container slide">
+      <h2>Galaxy tab 7 5G<br>런칭</h2>
+      <p>자세히 보기</p>
+      <a href="#" class="slide_btn">구매혜택보기</a>
+    </div>
   </div>
   
+  <div class="content">
+    <!-- section_01 -->
+    <div class="section sec_01">
+      <div class="container">
+        <ul class="blog">
+          <li>
+            <h4>Watch</h4>
+            <p>보다 완벽해진 스마트 헬스케어 워치</p>
+            <a href="#">자세히 보기</a>
+          </li>
+          <li>
+            <h4>buds</h4>
+            <p>처음 만나는 갤럭시 오픈형 무선 이어폰</p>
+            <a href="#">자세히 보기</a> 
+          </li>
+        </ul>
+      </div>
+    </div>
+    <!-- section_02 -->
+    <div class="section sec_02">
+      <div class="container">
+        <h4>또 다른 Galaxy를 만나보세요</h4>
+        <p>당신에게 꼭 맞는 갤럭시는?</p>
+        <div class="series">
+         <div><img src="./images/watch.png" alt=""></div>
+         <div><img src="./images/note.png" alt=""></div>
+         <div><img src="./images/buds-ov.png" alt=""></div>
+         <div><img src="./images/fold.png" alt=""></div>
+        </div>
+      </div>
+    </div>
+    <!-- section_03 -->
+    <div class="section sec_03">
+      <div class="container">
+        <h2>갤럭시 핏</h2>
+          <p>
+           수면, 심박수, 스트레스 등 다양한 데이터를 쉽게 확인하고
+           파워풀 배터리로 걱정없이 오래 착용 할 수 있습니다.
+          </p>
+        <a href="#" class="slide_btn">구매혜택보기</a>
+      </div>
+    </div>
+    <!-- section_04 -->
+    <div class="section sec_04">
+      <div class="container">
+        <h4>찾고있는 Galaxy가 있나요?</h4>
+        <p>당신에게 꼭 맞는 갤럭시는?</p>
+        <div class="series">
+         <div><img src="./images/watch.png" alt=""></div>
+         <div><img src="./images/buds.png" alt=""></div>
+         <div><img src="./images/note-ov.png" alt=""></div>
+         <div><img src="./images/fold.png" alt=""></div>
+         <div><img src="./images/buds-ov.png" alt=""></div>
+         <div><img src="./images/watch-ov.png" alt=""></div>
+         <div><img src="./images/buds-ov.png" alt=""></div>
+        </div>
+      </div>
+    </div>
+    <!-- section_05 -->
+    <div class="section sec_04">
+      <div class="container">
+        <h4>5G와  함께하는 삶</h4>
+        <p>당신의 삶을 변화시킬 5G</p>
+        <div class="5G">
+         <div><img src="./images/5g_01.png" alt=""></div>
+         <div><img src="./images/5g_02.png" alt=""></div>
+         <div><img src="./images/5g_03.png" alt=""></div>
+        </div>
+      </div>
+    </div>
+
+    <!-- footer -->
+    <div class="footer">
+      <div class="container">
+        <div class="left">
+          <div class="botto_logo"><img src="./images/logo.png" alt=""></div>
+          <p class="email_ad">
+            여러분의 이메일 주소를 보내주세요.<br>
+            갤럭시의 새로운 소식을 빠르고 간편하게 확인 할 수 있습니다.
+          </p>
+        </div>
+        <div class="right">
+          <ul class="bottome_menu">
+            <li>
+              <a href="#">기업정보</a>
+              <ul>
+                <li><a href="#">회사소개</a></li>
+                <li><a href="#">공지사항</a></li>
+                <li><a href="#">제품 접근성</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">고객문의</a>
+              <ul>
+                <li><a href="#">서비스 센터 찾기</a></li>
+                <li><a href="#">디지털프라자</a></li>
+                <li><a href="#">이메일 상담</a></li>
+                <li><a href="#">FAQ</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">제품소개</a>
+              <ul>
+                <li><a href="#">스마트폰</a></li>
+                <li><a href="#">태블릿</a></li>
+                <li><a href="#">워치</a></li>
+                <li><a href="#">버즈</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    
+  </div>
 </body>
 </html>
