--- a/index.html
+++ b/index.html
@@ -24,29 +24,31 @@
     </div>
   </div>
 
-  <!-- slide -->
-  <div class="slide_container">
-    <div class="container slide">
-      <h2>Galaxy tab 7 5G<br>런칭</h2>
-      <p>자세히 보기</p>
-      <a href="#" class="slide_btn">구매혜택보기</a>
-    </div>
-  </div>
-  
+
   <div class="content">
+    <!-- slide -->
+   <div class="slide_container">
+      <div class="container slide">
+       <h2>Galaxy tab 7<br>5G 런칭</h2>
+       <p>자세히 보기</p>
+       <a href="#" class="slide_btn">구매혜택보기</a>
+      </div>
+   </div>
     <!-- section_01 -->
     <div class="section sec_01">
       <div class="container">
         <ul class="blog">
           <li>
+            <img src="./images/watch-ov.png" alt="시계">
             <h4>Watch</h4>
             <p>보다 완벽해진 스마트 헬스케어 워치</p>
-            <a href="#">자세히 보기</a>
+            <a href="#" class="sec_01_btn">자세히 보기</a>
           </li>
           <li>
+            <img src="./images/buds-ov.png" alt="시계">
             <h4>buds</h4>
             <p>처음 만나는 갤럭시 오픈형 무선 이어폰</p>
-            <a href="#">자세히 보기</a> 
+            <a href="#" class="sec_01_btn">자세히 보기</a> 
           </li>
         </ul>
       </div>
