--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           <h4>5G와  함께하는 삶</h4>
           <p>당신의 삶을 변화시킬 5G</p>
           <div class="5G">
-            <ul class="itmes"></ul>
+            <ul class="itmes">
               <li>
                 <img src="./images/5g_01.png" alt="">
               </li>
@@ -168,6 +168,28 @@
               여러분의 이메일 주소를 보내주세요.<br>
               갤럭시의 새로운 소식을 빠르고 간편하게 확인 할 수 있습니다.
             </p>
+            <div class="buttons">
+              <ul class="store">
+                <li>
+                  <img src="./images/section/App store.png" alt="">
+                </li>
+                <li>
+                  <img src="./images/section/Google store.png" alt="">
+                </li>
+              </ul>
+              <ul class="icon">
+                <li>
+                  <img src="./images/section/icon/1.png" alt="">
+                </li>
+                <li>
+                  <img src="./images/section/icon/2.png" alt="">
+                </li>
+                <li>
+                  <img src="./images/section/icon/3.png" alt="">
+                </li>
+                <p>Copyright © 2020 Galaxy All Rights Reserved.</p>
+              </ul>
+            </div>
           </div>
           <div class="right">
             <ul class="bottom_menu">
