--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <h4>또 다른 Galaxy를 만나보세요</h4>
           <p>당신에게 꼭 맞는 갤럭시는?</p>
           <div class="series">
-            <ul class="itmes">
+            <ul class="items">
               <li>
                 <img src="./images/watch.png" alt="">
               </li>
@@ -102,7 +102,7 @@
           <h4>찾고있는 Galaxy가 있나요?</h4>
           <p>당신에게 꼭 맞는 갤럭시는?</p>
           <div class="series">
-            <ul class="itmes">
+            <ul class="items">
               <li>
                 <img src="./images/watch.png" alt="">
               </li>
@@ -116,7 +116,7 @@
                 <img src="./images/fold.png" alt="">
               </li>
             </ul>
-              <ul class="itmes">
+              <ul class="items">
               <li>
                 <img src="./images/buds-ov.png" alt="">
               </li>
@@ -140,8 +140,8 @@
         <div class="container">
           <h4>5G와  함께하는 삶</h4>
           <p>당신의 삶을 변화시킬 5G</p>
-          <div class="5G">
-            <ul class="itmes">
+          <div class="items">
+            <ul class="photo">
               <li>
                 <img src="./images/5g_01.png" alt="">
               </li>
