--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </div>
 
     <!-- scetion_03-->
-    <div class="section scetion_02">
+    <div class="section scetion_03">
       <div class="container">
         <h2>찾고있는 Galaxy가 있나요?</h2>
         <p>당신에게 꼭 맞는 갤럭시는?</p>
@@ -105,6 +105,88 @@
           <li><img src="./images/watch-ov.png" alt="" /></li>
           <li><img src="./images/buds.png" alt="" /></li>
         </ul>
+      </div>
+    </div>
+
+    <!-- scetion_04-->
+    <div class="section scetion_04">
+      <div class="container">
+        <h2>5G와 함께하는 삶</h2>
+        <p>당신의 삶을 변화시킬 5G</p>
+        <ul class="items">
+          <li><img src="./images/5g_01.png" alt="" /></li>
+          <li><img src="./images/5g_02.png" alt="" /></li>
+          <li><img src="./images/5g_03.png" alt="" /></li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- footer -->
+    <div class="footer">
+      <div class="container">
+        <div class="left">
+          <div class="footer_logo">
+            <img src="/images/logo2.png" alt="" />
+            <p>
+              여러분의 이메일 주소를 보내주세요.<br />
+              갤러시의 새로운 소식을 빠르고 간편하게 확인 할 수 있습니다.
+            </p>
+          </div>
+          <div class="email_box">
+            <div class="email">
+              <p>이메일 주소</p>
+            </div>
+            <div class="email_button">
+              <a href="#">
+                <p>보내기</p>
+              </a>
+            </div>
+          </div>
+          <div class="store">
+            <ul class="store_button">
+              <li><img src="./images/section/App store.png" alt="" /></li>
+              <li><img src="./images/section/Google store.png" alt="" /></li>
+            </ul>
+          </div>
+          <div class="bottom">
+            <ul class="sns">
+              <li><img src="./images/section/icon/1.png" alt="" /></li>
+              <li><img src="./images/section/icon/2.png" alt="" /></li>
+              <li><img src="./images/section/icon/3.png" alt="" /></li>
+            </ul>
+            <p>Copyright ⓒ 2020 Galaxy All rights Reserved.</p>
+          </div>
+        </div>
+        <div class="right">
+          <ul class="bottom_menu">
+            <li>
+              <a href="#">기업정보</a>
+              <ul>
+                <li><a href="#">회사소개</a></li>
+                <li><a href="#">공지사항</a></li>
+                <li><a href="#">제품 접근성</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">고객문의</a>
+              <ul>
+                <li><a href="#">서비스 센터 찾기</a></li>
+                <li><a href="#">디지털 프라자</a></li>
+                <li><a href="#">이메일 상담</a></li>
+                <li><a href="#">FAQ</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">제품소개</a>
+              <ul>
+                <li><a href="#">스마트폰</a></li>
+                <li><a href="#">태블릿</a></li>
+                <li><a href="#">위치</a></li>
+                <li><a href="#">버즈</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </body>
