--- a/index.html
+++ b/index.html
@@ -154,7 +154,6 @@
               <li><img src="./images/section/icon/2.png" alt="" /></li>
               <li><img src="./images/section/icon/3.png" alt="" /></li>
             </ul>
-            <p>Copyright ⓒ 2020 Galaxy All rights Reserved.</p>
           </div>
         </div>
         <div class="right">
@@ -187,6 +186,7 @@
             </li>
           </ul>
         </div>
+        <p class="copyright">Copyright ⓒ 2020 Galaxy All rights Reserved.</p>
       </div>
     </div>
   </body>
